Use new_ui as main project
Change-Id: I80779416f8e9a032406d2a76d1092bb0f68998b3